- improve default address handling
- renamted Lite.php to Cache_Lite.php to follow loader conventions
- removed code that preloads classes as the loader now supports __autoload()
- convert code to use new where explicitely ZM prefixed classes are used
- add simple stats to ZMLoader and display with zm_page_stats plugin
- upgrade admin to jquery 1.3.2
- fix admin ajax

Release 0.9.5.1
- fix broken price filter in product search; b:#2689495
- fix broken redeem coupon; b:#2689552
- fix missing decimalPoint property in currencies; b:#2689542

Release 0.9.5
- add ZMDbUtils::buildTableMapping(...)
- add new setting 'isEnableDBAutoMapping' to enable auto table mapping;
  default is false/off
- add ZMDatabase::loadModel as the next/last step to abstract the SQL away if
  desired
- change ZMBanners::getBannersForGroupName() access to protected
- add code for banner group 2 to default theme
- change banner code to use symbolic names rather than index
- change getBannerForGroupName to getBannerForSet
- zm_imagehandler2: add new plugin option to disable IH2 img attributes
- add some initial widget code
- review / reorganize SEO related functions - there were still cases were
  zen_href_link parameters got lost; affectes all SEO related plugins and core
- add widget form utility class to allow widgets to have a go at submitted
  form data in case they need to twiddle with it (so far only checkboxes need
  this
- fix missing calculated price on order items; b:#2544585
- refactor and streamline admin menu handling; add ZMAdminMenu class; use
  ZMAdmin constants rather defines for menu ids, add new const to add items to
  the tools menu
- more define/const refactoring
- allow event subscribers to implement update(..) to receive all zen-cart
  events
- add new patch to be able to filter the HTML response using zen-cart
  templates; this will enable most storefront plugins for zen-cart templates!
- cache reflection data (class methods) in ZMEvents