@@ -416,7 +416,7 @@ class ZMPdoDatabase extends ZMObject implements ZMDatabase {
         try {
             $stmt = $this->prepareStatement($sql, $args, $mapping);
             $stmt->execute();
-        $rows = $stmt->fetchAll();
+            $rows = $stmt->fetchAll();
         } catch (PDOException $pdoe) {
             throw new ZMDatabaseException($pdoe->getMessage(), $pdoe->getCode(), $pdoe);
         }
