@@ -58,7 +58,7 @@ class ZMOrderStatusIdFilter extends ZMResultListFilter implements ZMSQLAware {
      */
     public function getQueryDetails($method=null, $args=array()) {
         //TODO: allow mapped names
-        return ZMLoader::make('QueryDetails', 'o.orders_status = 2');
+        return new ZMQueryDetails(ZMRuntime::getDatabase(), 'o.orders_status = 2');
     }
 
 }
