@@ -137,7 +137,7 @@ class ZMProductSorter extends ZMResultListSorter implements ZMSQLAware {
             return null;
         }
 
-        return ZMLoader::make('QueryDetails', $this->sql_[$this->sortId_] . ($this->isDescending() ? ' DESC' : ' ASC'));
+        return ZMQueryDetails(ZMRuntime::getDatabase(), $this->sql_[$this->sortId_] . ($this->isDescending() ? ' DESC' : ' ASC'));
     }
 
 }
